--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get upgrade -y && \
 	php-mysql \
 	mariadb-client \
 	wordpress \
+	sendmail \
 	wget && \
 	rm -rf /var/lib/apt/lists/*
 	
