fix: mariadb error when rebooting

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,6 +9,10 @@ RUN apt update && apt upgrade -y && \
 	mariadb-server && \
 	rm -rf /var/lib/apt/lists/*
 
+RUN mkdir -p /var/run/mysqld && \
+	chown -R mysql:mysql /var/run/mysqld && \
+	chmod 777 /var/run/mysqld
+
 RUN echo "[mysqld] \n\
 		skip-networking=0 \n\
 		skip-bind-address" >> /etc/mysql/my.cnf
