--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,5 @@
 server {
-	server_name			reviera.42.fr;
+	server_name			revieira.42.fr;
 
 	listen				443 ssl;
 	ssl_certificate		/etc/ssl/certs/localhost.crt;
