refactor: env variables

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,15 @@
 DOMAIN_NAME=revieira.42.fr
 
-WORDPRESS_USER=test
-WORDPRESS_PASSWORD=test
-WORDPRESS_EMAIL=test@test.com
+# WORDPRESS
+WP_ROOT_USER=revieira
+WP_ROOT_EMAIL=revieira@student.42sp.org.br
+WP_ROOT_PASSWORD=simplepassword
 
+WP_USER=marvin
+WP_EMAIL=marvin@marvin.fr
+WP_PASSWORD=anothersimplepassword
+
+# DATABASE
 DB_NAME=wordpress_db
 DB_USER=wuser
 DB_PASSWORD=wpass
-DB_ROOT_PASSWORD=wpass
-
