feat: added bonus static website

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,17 +1,24 @@
 server {
+	listen				443 ssl;
+	listen				[::]:443 ssl;
+
 	server_name			revieira.42.fr;
 
-	listen				443 ssl;
 	ssl_certificate		/etc/ssl/certs/localhost.crt;
 	ssl_certificate_key	/etc/ssl/private/localhost.key;
 	ssl_protocols		TLSv1.2 TLSv1.3;
 
-	root /var/www/html;
+	root /var/www/html/;
 
 	index index.php;
 
 	location ~ \.php$ {
 		include		 snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
+	}
+
+	location /website/ {
+		alias /var/lib/nginx;
+		index index.html;
 	}
 }
