--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:oldstable
 
-RUN apt-get update &&  apt-get upgrade -y && \
-	apt-get install -y \
+RUN apt update &&  apt upgrade -y && \
+	apt install -y \
 	nginx \
 	openssl && \
 	rm -rf /var/lib/apt/lists/*
