--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,13 +7,14 @@ RUN apt update &&  apt upgrade -y && \
 	rm -rf /var/lib/apt/lists/*
 
 RUN openssl req -batch -x509 -sha256 -nodes -newkey rsa:2048 -days 365 \
-	-keyout /etc/ssl/private/localhost.key \
-	-out /etc/ssl/certs/localhost.crt
+	-keyout /etc/ssl/private/private.key \
+	-out /etc/ssl/certs/certificate.crt \
+	-subj "/C=BR/ST=SP/L=SãoPaulo/O=42sp/CN=revieira.42.fr"
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d
-RUN chmod 755 /var/www/html
 
-RUN chown -R www-data:www-data /var/www/html
+# RUN chmod 755 /var/www/html
+# RUN chown -R www-data:www-data /var/www/html
 
 EXPOSE 443
 
