--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -4,16 +4,27 @@ server {
 
 	server_name			revieira.42.fr;
 
-	ssl_certificate		/etc/ssl/certs/localhost.crt;
-	ssl_certificate_key	/etc/ssl/private/localhost.key;
+	ssl_certificate_key	/etc/ssl/private/private.key;
+	ssl_certificate		/etc/ssl/certs/certificate.crt;
 	ssl_protocols		TLSv1.2 TLSv1.3;
 
-	root /var/www/html/;
+	root /var/www;
 
 	index index.php;
 
-	location ~ \.php$ {
-		include		 snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
+	location / {
+		root /var/www/wordpress;
+		location ~ \.php$ {
+			include		 snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
 	}
+
+	location /adminer {
+		location ~ \.php$ {
+			include		 snippets/fastcgi-php.conf;
+			fastcgi_pass adminer:9001;
+		}
+	}
+
 }
