refactor: configuring nginx to point to the website

--- a/srcs/requirements/bonus/static-website/conf/nginx.conf
+++ b/srcs/requirements/bonus/static-website/conf/nginx.conf
@@ -2,12 +2,10 @@ server {
 	listen				4242;
 	server_name			revieira.42.fr;
 
-	ssl_certificate		/etc/ssl/certs/localhost.crt;
-	ssl_certificate_key	/etc/ssl/private/localhost.key;
-	ssl_protocols		TLSv1.2 TLSv1.3;
+	index	index.html index.htm;
+	root /usr/share/nginx/html;
 
 	location / {
-		index	index.html index.htm;
-		root /usr/share/nginx/html;
+		try_files $uri $uri/ /index.html =404;
 	}
 }
