--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,16 +1,16 @@
 server {
-	listen				443 ssl;
-	listen				[::]:443 ssl;
+	listen 443 ssl;
+	listen [::]:443 ssl;
 
-	server_name			revieira.42.fr;
+	server_name revieira.42.fr;
 
 	ssl_certificate_key	/etc/ssl/private/private.key;
-	ssl_certificate		/etc/ssl/certs/certificate.crt;
-	ssl_protocols		TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/ssl/certs/certificate.crt;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root /var/www;
 
-	index index.php;
+	index index.php index.html;
 
 	location / {
 		root /var/www/wordpress;
@@ -27,4 +27,7 @@ server {
 		}
 	}
 
+	location /static-website {
+		proxy_pass http://static-website:4242;
+	}
 }
