fix: wordpress path

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:oldstable
 
-WORKDIR /var/www/html/
+WORKDIR /var/www/wordpress
 
 RUN apt update && apt upgrade -y && \
 	apt install -y \
@@ -15,12 +15,12 @@ RUN apt update && apt upgrade -y && \
 
 RUN wget -O /usr/local/bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 RUN chmod +x /usr/local/bin/wp
-RUN wp core download --allow-root --path=/var/www/html
+RUN wp core download --allow-root --path=/var/www/wordpress
 
 RUN mkdir /run/php
 
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
-COPY conf/wp-config.php /var/www/html/wp-config.php
+COPY conf/wp-config.php /var/www/wordpress/wp-config.php
 COPY ./tools/wordpressinit.sh /tmp/wordpressinit.sh
 
 RUN chmod +x /tmp/wordpressinit.sh
