--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -62,6 +62,20 @@ services:
     ports:
       - 443:443
 
+  redis:
+    build:
+      context: ./requirements/bonus/redis/
+      args:
+        - REDIS_PASSWORD=${REDIS_PASSWORD}
+    image: redis:inception
+    container_name: redis
+    depends_on:
+      - wordpress
+    networks:
+      - inception
+    ports:
+      - 6379:6379
+
   adminer:
     build: ./requirements/bonus/adminer/
     image: adminer:inception
@@ -81,6 +95,7 @@ services:
       - inception
     ports:
       - 4242:4242
+
 
   uptime-kuma:
     build: ./requirements/bonus/uptime-kuma/
