--- a/srcs/requirements/bonus/uptime-kuma/Dockerfile
+++ b/srcs/requirements/bonus/uptime-kuma/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:oldstable
 RUN apt update && apt upgrade -y && \
 	apt install -y \
 	git \
-	wget
+	wget && \
+	rm -rf /var/lib/apt/lists/*
 
 RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 RUN . /root/.bashrc && nvm install v20.4 && \
