--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,17 +9,17 @@ RUN apt update && apt upgrade -y && \
 	php-mysql \
 	mariadb-client \
 	wordpress \
-	# sendmail \
 	wget && \
 	rm -rf /var/lib/apt/lists/*
 
-RUN wget -O /usr/local/bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x /usr/local/bin/wp
-RUN wp core download --allow-root --path=/var/www/wordpress
+RUN wget -O /usr/local/bin/wp https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+	chmod +x /usr/local/bin/wp && \
+	wp core download --allow-root --path=/var/www/wordpress
 
 RUN mkdir /run/php
-RUN chown -R www-data:www-data /var/www/wordpress
-RUN chmod 755 /var/www/wordpress
+
+RUN chown -R www-data:www-data /var/www/wordpress && \
+	chmod 755 /var/www/wordpress
 
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
 COPY conf/wp-config.php /var/www/wordpress/wp-config.php
