--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -4,18 +4,15 @@ WORKDIR /var/www/adminer
 
 RUN apt update && apt upgrade -y && \
 	apt install -y \
-	wget \
 	php7.4 \
 	php-fpm \
-	php-mysql 
+	php-mysql \
+	wget && \
+	rm -rf /var/lib/apt/lists/*
 
 RUN wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1-mysql.php -O index.php && \
 	chown -R www-data:www-data index.php && \
 	chmod 755 index.php
-
-RUN wget https://raw.githubusercontent.com/Niyko/Hydra-Dark-Theme-for-Adminer/master/adminer.css -O theme.css && \
-	chown -R www-data:www-data theme.css && \
-	chmod 755 theme.css
 
 RUN mkdir /run/php
 
