refactor: copy imgs to container

--- a/srcs/requirements/bonus/static-website/Dockerfile
+++ b/srcs/requirements/bonus/static-website/Dockerfile
@@ -6,6 +6,7 @@ RUN apt update &&  apt upgrade -y && \
 	rm -rf /var/lib/apt/lists/*
 
 COPY ./tools/index.html /usr/share/nginx/html
+COPY ./tools/imgs /usr/share/nginx/html/imgs
 COPY ./conf/nginx.conf /etc/nginx/conf.d
 
 RUN chmod 755 /var/www/html && \
