--- a/srcs/requirements/bonus/static-website/Dockerfile
+++ b/srcs/requirements/bonus/static-website/Dockerfile
@@ -2,8 +2,14 @@ FROM debian:oldstable
 
 RUN apt update &&  apt upgrade -y && \
 	apt install -y \
-	nginx && \
+	nginx \
+	openssl && \
 	rm -rf /var/lib/apt/lists/*
+
+RUN openssl req -batch -x509 -sha256 -nodes -newkey rsa:2048 -days 365 \
+	-keyout /etc/ssl/private/private.key \
+	-out /etc/ssl/certs/certificate.crt \
+	-subj "/C=BR/ST=SP/L=SãoPaulo/O=42sp/CN=revieira.42.fr"
 
 COPY ./tools/index.html /usr/share/nginx/html
 COPY ./tools/imgs /usr/share/nginx/html/imgs
