--- a/srcs/requirements/bonus/static-website/conf/nginx.conf
+++ b/srcs/requirements/bonus/static-website/conf/nginx.conf
@@ -2,10 +2,15 @@ server {
 	listen				4242;
 	server_name			revieira.42.fr;
 
+	server_name revieira.42.fr;
+
+	ssl_certificate_key	/etc/ssl/private/private.key;
+	ssl_certificate /etc/ssl/certs/certificate.crt;
+	ssl_protocols TLSv1.2 TLSv1.3;
+
 	index	index.html index.htm;
-	root /usr/share/nginx/html;
 
 	location / {
-		try_files $uri $uri/ /index.html =404;
+		root /usr/share/nginx/html;
 	}
 }
