--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         - DB_PASSWORD=${DB_PASSWORD}
     image: mariadb:inception
     container_name: mariadb
+    restart: on-failure
     healthcheck:
       test: mysqladmin ping -h localhost -u root
       interval: 3s
@@ -29,6 +30,7 @@ services:
     build: ./requirements/wordpress/
     image: wordpress:inception
     container_name: wordpress
+    restart: on-failure
     depends_on:
       mariadb:
         condition: service_healthy
@@ -52,6 +54,7 @@ services:
     build: ./requirements/nginx/
     image: nginx:inception
     container_name: nginx
+    restart: on-failure
     depends_on:
       - wordpress
     volumes:
@@ -66,6 +69,7 @@ services:
     build: ./requirements/bonus/adminer/
     image: adminer:inception
     container_name: adminer
+    restart: on-failure
     volumes:
       - adminer-volume:/var/www/adminer
     depends_on:
@@ -77,6 +81,7 @@ services:
     build: ./requirements/bonus/static-website/
     image: static-website:inception
     container_name: static-website
+    restart: on-failure
     networks:
       - inception
     ports:
@@ -86,6 +91,7 @@ services:
     build: ./requirements/bonus/uptime-kuma/
     image: uptime-kuma:inception
     container_name: uptime-kuma
+    restart: on-failure
     depends_on:
       - nginx
     volumes:
